--- a/app/design/frontend/gs-default/default/layout/adjnav.xml
+++ b/app/design/frontend/gs-default/default/layout/adjnav.xml
@@ -127,6 +127,7 @@
 		<remove name="sale.reorder.sidebar"/> 
 		<remove name="wishlist_sidebar"/>		
 		<!--<remove name="cart_sidebar"/>-->
+		<action method="unsetChild"><name>cart_sidebar</name></action>
 	</reference>		
 	
 	
