--- a/app/design/frontend/gs-default/default/layout/local.xml
+++ b/app/design/frontend/gs-default/default/layout/local.xml
@@ -7,6 +7,7 @@
 			 // this is to prevent breaking the default layout if we change the package
 			 <action method="removeItem"><type>js</type><name>aw_ajaxcartpro/ajaxcartpro-1.4.6.js</name></action>
 			 <action method="removeItem"><type>js</type><name>aw_ajaxcartpro/ajaxcartpro-community-1.4.6.js</name></action>
+			 <action method="addItem"><type>skin_js</type><name>js/GSWrapper.js</name></action>
 			 // now lets add our customized Ajax Cart Pro js from the gs-default package
 			 <action method="addItem"><type>skin_js</type><name>js/aw_ajaxcartpro/ajaxcartpro-1.4.6.js</name></action>
 			 <action method="addItem"><type>skin_js</type><name>js/aw_ajaxcartpro/ajaxcartpro-community-1.4.6.js</name></action>
