--- a/app/design/frontend/gs-default/default/layout/customer.xml
+++ b/app/design/frontend/gs-default/default/layout/customer.xml
@@ -83,4 +83,27 @@
         </reference> 
     </customer_account_edit>
 
+    <customer_account_login translate="label">
+        <label>Customer Account Login Form</label>
+        <!-- Mage_Customer -->
+        <remove name="right"/>
+        <remove name="left"/>
+
+        <reference name="root">
+            <action method="setTemplate"><template>page/gs-1column.phtml</template></action>
+        </reference>
+        <reference name="content">
+            <block type="customer/form_login" name="customer_form_login" template="customer/form/login.phtml" />
+        </reference>
+    </customer_account_login>
+	
+	  <customer_address_form translate="label">
+        <label>Customer My Account Address Edit Form</label>
+        <!-- Mage_Customer -->
+        <update handle="customer_account"/>
+        <reference name="my.account.wrapper">
+            <block type="customer/address_edit" name="customer_address_edit" template="customer/address/edit.phtml"/>
+        </reference>
+    </customer_address_form> 
+	
 </layout>
