--- a/app/design/frontend/gs-default/default/layout/customer.xml
+++ b/app/design/frontend/gs-default/default/layout/customer.xml
@@ -94,6 +94,11 @@
         </reference>
         <reference name="content">
             <block type="customer/form_login" name="customer_form_login" template="customer/form/login.phtml" />
+			<block type="customer/form_register" name="customer_form_register" template="customer/form/register.phtml">
+				<block type="page/html_wrapper" name="customer.form.register.fields.before" as="form_fields_before" translate="label">
+					<label>Form Fields Before</label>
+				</block>
+			</block>
         </reference>
     </customer_account_login>
 	
