--- a/app/design/frontend/gs-default/default/layout/persistent.xml
+++ b/app/design/frontend/gs-default/default/layout/persistent.xml
@@ -6,5 +6,24 @@
             <block type="persistent/form_remember" name="persistent.remember.me" template="persistent/remember_me.phtml" />
             <block type="core/template" name="persistent.remember.me.tooltip" template="persistent/remember_me_tooltip.phtml" />
         </reference>
+		<reference name="customer_form_register">
+            <action method="setTemplate"><template>persistent/customer/form/register.phtml</template></action>
+            <block type="persistent/form_remember" name="persistent.remember.me" template="persistent/remember_me.phtml" />
+            <block type="core/template" name="persistent.remember.me.tooltip" template="persistent/remember_me_tooltip.phtml" />
+		</reference>
     </customer_account_login> 
+	
+	  <customer_account_create>
+	    <reference name="customer_form_login">
+            <action method="setTemplate"><template>persistent/customer/form/login.phtml</template></action>
+            <block type="persistent/form_remember" name="persistent.remember.me" template="persistent/remember_me.phtml" />
+            <block type="core/template" name="persistent.remember.me.tooltip" template="persistent/remember_me_tooltip.phtml" />
+        </reference>
+        <reference name="customer_form_register">
+            <action method="setTemplate"><template>persistent/customer/form/register.phtml</template></action>
+            <block type="persistent/form_remember" name="persistent.remember.me" template="persistent/remember_me.phtml" />
+            <block type="core/template" name="persistent.remember.me.tooltip" template="persistent/remember_me_tooltip.phtml" />
+        </reference>
+    </customer_account_create>
+	
 </layout>
