remove extra fields

--- a/app/design/frontend/gs-default/default/template/persistent/customer/form/register.phtml
+++ b/app/design/frontend/gs-default/default/template/persistent/customer/form/register.phtml
@@ -135,9 +135,9 @@
                     </div></td>
                 </tr>
               </table> 
-                <?php echo $this->getChildHtml('form.additional.info'); ?>
-                <?php echo $this->getChildHtml('persistent.remember.me'); ?>
-            <?php echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
+                <?php //echo $this->getChildHtml('form.additional.info'); ?>
+                <?php //echo $this->getChildHtml('persistent.remember.me'); ?>
+				<?php //echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
             </form>
           </div>
         </div>
