--- a/app/design/frontend/gs-default/default/template/customer/address/edit.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/address/edit.phtml
@@ -1,77 +1,79 @@
 <?php if($this->getTitle()): ?>
-<div class="page-title">
-    <h1><?php echo $this->getTitle() ?></h1>
+<div class="head_result">
+    <?php echo $this->getTitle() ?> 
 </div>
+		<div class="acctn_personal">
 <?php endif; ?>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 <form action="<?php echo $this->getSaveUrl() ?>" method="post" id="form-validate">
-    <div class="fieldset">
     <?php echo $this->getBlockHtml('formkey')?>
+ <table width="100%" border="0" cellspacing="0" cellpadding="0"> 
     <input type="hidden" name="success_url" value="<?php echo $this->getSuccessUrl() ?>" />
     <input type="hidden" name="error_url" value="<?php echo $this->getErrorUrl() ?>" />
-        <h2 class="legend"><?php echo $this->__('Contact Information') ?></h2>
-        <ul class="form-list">
-            <li class="fields">
+        <tr>
+			<td>
                 <?php echo $this->getNameBlockHtml() ?>
-            </li>
-            <li class="wide">
-                <label for="company"><?php echo $this->__('Company') ?></label>
-                <div class="input-box">
-                    <input type="text" name="company" id="company" title="<?php echo $this->__('Company') ?>" value="<?php echo $this->escapeHtml($this->getAddress()->getCompany()) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('company') ?>" />
-                </div>
-            </li>
-            <li class="fields">
-                <div class="field">
-                    <label for="telephone" class="required"><em>*</em><?php echo $this->__('Telephone') ?></label>
-                    <div class="input-box">
-                        <input type="text" name="telephone" value="<?php echo $this->escapeHtml($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="input-text  <?php echo $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" id="telephone" />
-                    </div>
-                </div>
-                <div class="field">
-                    <label for="fax"><?php echo $this->__('Fax') ?></label>
-                    <div class="input-box">
-                        <input type="text" name="fax" id="fax" title="<?php echo $this->__('Fax') ?>" value="<?php echo $this->escapeHtml($this->getAddress()->getFax()) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('fax') ?>" />
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </div>
-    <div class="fieldset">
-        <h2 class="legend"><?php echo $this->__('Address') ?></h2>
-        <ul class="form-list">
+			</td>
+		</tr>
+        <tr>
+			<td>
+                <label for="company"><?php echo $this->__('Company') ?></label> 
+                <input type="text" name="company" id="company" title="<?php echo $this->__('Company') ?>" value="<?php echo $this->escapeHtml($this->getAddress()->getCompany()) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('company') ?>" />
+			</td>
+		</tr> 
+        <tr>
+			<td>
+				<label for="telephone" class="required"><em>*</em><?php echo $this->__('Telephone') ?></label> 
+                <input type="text" name="telephone" value="<?php echo $this->escapeHtml($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="input-text  <?php echo $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" id="telephone" />
+         </td>
+		</tr>           
+          
+        <tr>
+			<td>
+				<label for="fax"><?php echo $this->__('Fax') ?></label>
+				<input type="text" name="fax" id="fax" title="<?php echo $this->__('Fax') ?>" value="<?php echo $this->escapeHtml($this->getAddress()->getFax()) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('fax') ?>" />
+            </td>
+		</tr>   
+		 <tr>
+			<td>
+				<?php echo $this->__('Address') ?></h2>
+			</td>
+		</tr>   
         <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?>
-            <li class="wide">
+        <tr>
+			<td>
                 <label for="street_1" class="required"><em>*</em><?php echo $this->__('Street Address') ?></label>
-                <div class="input-box">
-                    <input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet(1)) ?>" title="<?php echo $this->__('Street Address') ?>" id="street_1" class="input-text <?php echo $_streetValidationClass ?>" />
-                </div>
-            </li>
+				<input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet(1)) ?>" title="<?php echo $this->__('Street Address') ?>" id="street_1" class="input-text <?php echo $_streetValidationClass ?>" />
+			</td>
+		</tr>  
         <?php $_streetValidationClass = trim(str_replace('required-entry', '', $_streetValidationClass)); ?>
-        <?php for ($_i = 2, $_n = $this->helper('customer/address')->getStreetLines(); $_i <= $_n; $_i++): ?>
-            <li class="wide">
-                <div class="input-box">
-                    <input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet($_i)) ?>" title="<?php echo $this->__('Street Address %s', $_i) ?>" id="street_<?php echo $_i ?>" class="input-text <?php echo $_streetValidationClass ?>" />
-                </div>
-            </li>
+        <?php for ($_i = 2, $_n = $this->helper('customer/address')->getStreetLines(); $_i <= $_n; $_i++): ?> 
+			<tr>
+				<td>
+					<input type="text" name="street[]" value="<?php echo $this->escapeHtml($this->getAddress()->getStreet($_i)) ?>" title="<?php echo $this->__('Street Address %s', $_i) ?>" id="street_<?php echo $_i ?>" class="input-text <?php echo $_streetValidationClass ?>" />
+				</td>
+			</tr>  
         <?php endfor; ?>
             <?php if ($this->helper('customer/address')->isVatAttributeVisible()) : ?>
-            <li class="wide">
-                <label for="vat_id"><?php echo $this->__('VAT Number') ?></label>
-                <div class="input-box">
-                    <input type="text" name="vat_id" value="<?php echo $this->escapeHtml($this->getAddress()->getVatId()) ?>" title="<?php echo $this->__('VAT Number') ?>" id="vat_id" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('vat_id') ?>" />
-                </div>
-            </li>
+			<tr>
+				<td>
+					<label for="vat_id"><?php echo $this->__('VAT Number') ?></label>
+					<input type="text" name="vat_id" value="<?php echo $this->escapeHtml($this->getAddress()->getVatId()) ?>" title="<?php echo $this->__('VAT Number') ?>" id="vat_id" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('vat_id') ?>" />
+           		</td>
+			</tr>  
             <?php endif; ?>
-            <li class="fields">
-                <div class="field">
+            <tr>
+				<td>
                     <label for="city" class="required"><em>*</em><?php echo $this->__('City') ?></label>
-                    <div class="input-box">
+                     
                         <input type="text" name="city" value="<?php echo $this->escapeHtml($this->getAddress()->getCity()) ?>"  title="<?php echo $this->__('City') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('city') ?>" id="city" />
-                    </div>
-                </div>
-                <div class="field">
+                  
+              </td>
+			</tr> 
+               <tr>
+				<td>
                     <label for="region_id" class="required"><em>*</em><?php echo $this->__('State/Province') ?></label>
-                    <div class="input-box">
+                     
                         <select id="region_id" name="region_id" title="<?php echo $this->__('State/Province') ?>" class="validate-select" style="display:none;">
                            <option value=""><?php echo $this->__('Please select region, state or province') ?></option>
                         </select>
@@ -81,23 +83,25 @@
                         //]]>
                         </script>
                         <input type="text" id="region" name="region" value="<?php echo $this->escapeHtml($this->getAddress()->getRegion()) ?>"  title="<?php echo $this->__('State/Province') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('region') ?>" />
-                    </div>
-                </div>
-            </li>
-            <li class="fields">
-                <div class="field">
+              </td>
+			</tr> 
+           <tr>
+				<td>
                     <label for="zip" class="required"><em>*</em><?php echo $this->__('Zip/Postal Code') ?></label>
-                    <div class="input-box">
+                   
                         <input type="text" name="postcode" value="<?php echo $this->escapeHtml($this->getAddress()->getPostcode()) ?>" title="<?php echo $this->__('Zip/Postal Code') ?>" id="zip" class="input-text validate-zip-international <?php echo $this->helper('customer/address')->getAttributeValidationClass('postcode') ?>" />
-                    </div>
-                </div>
-                <div class="field">
+                   </td>
+			</tr> 
+                <tr>
+				<td>
                     <label for="country" class="required"><em>*</em><?php echo $this->__('Country') ?></label>
-                    <div class="input-box">
+                     
                         <?php echo $this->getCountryHtmlSelect() ?>
-                    </div>
-                </div>
-            </li>
+                     
+              </td>
+			</tr> 
+			 <tr>
+				<td>
             <li<?php if($this->canSetAsDefaultBilling()) echo ' class="control"' ?>>
                 <?php if($this->isDefaultBilling()): ?>
                     <strong><?php echo $this->__('Default Billing Address') ?></strong>
@@ -115,15 +119,23 @@
                 <?php else: ?>
                     <input type="hidden" name="default_shipping" value="1" />
                 <?php endif; ?>
-            </li>
-        </ul>
-    </div>
-    <div class="buttons-set">
-        <p class="required"><?php echo $this->__('* Required Fields') ?></p>
-        <p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
-        <button type="submit" title="<?php echo $this->__('Save Address') ?>" class="button"><span><span><?php echo $this->__('Save Address') ?></span></span></button>
-    </div>
+            </li> 
+			
+              </td>
+			</tr> 
+			<tr>
+				<td>
+					<div class="rad_8 btn_block">  
+							<button type="submit" title="<?php echo $this->__('Save Address') ?>" class="button"><span><span><?php echo $this->__('Save Address') ?></span></span></button>
+						 
+					</div><p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
+							
+							<p class="required"><?php echo $this->__('* Required Fields') ?></p>
+              </td>
+			</tr> 
+	</table>
 </form>
+</div>
 <script type="text/javascript">
 //<![CDATA[
     var dataForm = new VarienForm('form-validate', true);
