--- a/app/design/frontend/gs-default/default/layout/page.xml
+++ b/app/design/frontend/gs-default/default/layout/page.xml
@@ -182,7 +182,7 @@ Default layout, loads most of the pages
     <page_two_columns_right translate="label">
         <label>All Two-Column Layout Pages (Right Column)</label>
         <reference name="root">
-            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
+            <action method="setTemplate"><template>page/gs-2columns-right.phtml</template></action>
             <!-- Mark root page block that template is applied -->
             <action method="setIsHandle"><applied>1</applied></action>
             <action method="setLayoutCode"><name>two_columns_right</name></action>
@@ -192,7 +192,7 @@ Default layout, loads most of the pages
     <page_three_columns translate="label">
         <label>All Three-Column Layout Pages</label>
         <reference name="root">
-            <action method="setTemplate"><template>page/3columns.phtml</template></action>
+            <action method="setTemplate"><template>page/gs-3columns.phtml</template></action>
             <!-- Mark root page block that template is applied -->
             <action method="setIsHandle"><applied>1</applied></action>
             <action method="setLayoutCode"><name>three_columns</name></action>
