--- a/app/design/frontend/gs-default/default/template/page/gs-1column.phtml
+++ b/app/design/frontend/gs-default/default/template/page/gs-1column.phtml
@@ -18,6 +18,7 @@
 		<div id="main_wrapper">
 			<div class="w898">
 				<?php echo $this->getChildHtml('global_notices') ?>
+				<?php echo $this->getChildHtml('breadcrumbs') ?>
 				<?php echo $this->getChildHtml('content') ?>
 				<div class="clear"></div>
 			</div>
